lambdacube-dsl/tests/reject/adhoc.lc

data A = A

main = V4 A A A A


